--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,33 @@
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
-#map { height: 100%; position: relative}
-
+html {
+    height: 100%
+}
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0
+}
+#map {
+    height: 100%;
+    position: relative
+}
 .leaflet-map-pane {
     z-index: 2 !important;
 }
-
 .leaflet-google-layer {
     z-index: 1 !important;
 }
-
 .info {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
 .info h4 {
     margin: 0 0 5px;
     color: #777;
 }
-
 .legend {
     line-height: 18px;
     color: #555;
@@ -34,7 +39,6 @@ body { height: 100%; margin: 0; padding: 0 }
     margin-right: 8px;
     opacity: 0.7;
 }
-
 /*
 .userInputControl {
     line-height: 18px;
@@ -49,18 +53,95 @@ body { height: 100%; margin: 0; padding: 0 }
     color: #777;
 }
 */
-
-.titlecell{
+ .titlecell {
     font-weight: bold;
     text-transform: uppercase;
 }
-
-.icon
-{
+.icon {
     width:40px;
     height:40px;
 }
-
-h4{
+h4 {
     text-align:center;
 }
+/**
+* CSS for AHP Entry Form
+**/
+
+.flatform {
+    font: 400 1em/1.5"Open Sans" sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+
+.switch {
+    color: #6f839a;
+    cursor: pointer;
+    font-weight: 600;
+    line-height: 1.5em;
+    border-radius: 3px;
+    padding: .125em .5em;
+    display: inline-block;
+    background-color: #3e4956;
+    -webkit-transition: .15s ease;
+    -moz-transition: .15s ease;
+    -ms-transition: .15s ease;
+    -o-transition: .15s ease;
+    transition: .15s ease;
+}
+input[type="radio"]:checked + .switch {
+    color: #fff;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+input[type="radio"]:checked + .switch--on {
+    background-color: #7eab55;
+}
+input[type="radio"]:checked + .switch--off {
+    background-color: #dd4a38;
+}
+
+
+/*#ahp-form {
+    width: 300px;
+    padding: 18px 20px 0;
+    margin - bottom: 18px;
+    background: #4f84b8 url(box-grad.png) repeat-x 0 0;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, .4);
+    -webkit-box-shadow: 0 5px 12px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0 5px 12px rgba(0, 0, 0, .4);
+    -khtml-box-shadow: 0 5px 12px rgba(0, 0, 0, .4);
+    color: #fff;
+}
+fieldset {
+    border: 0;
+    padding-bottom: 9px;
+}
+#ahp-form > label {
+    display: block;
+    cursor: pointer;
+    line-height: 20px;
+    padding-bottom: 9px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
+}
+.radios {
+    padding-top: 18px;
+    background: url(divider.png) repeat-x 0 0;
+}
+.label_check input, .label_radio input {
+    margin-right: 5px;
+}
+
+.label_check,
+.label_radio    { padding-left: 34px; }
+.label_radio    { background: url(radio-off.png) no-repeat; }
+label.r_on      { background: url(radio-on.png) no-repeat; }
+.label_check input,
+.label_radio input  { position: absolute; left: -9999px; }
+*/
+
