--- a/css/main.css
+++ b/css/main.css
@@ -65,16 +65,25 @@ h4 {
     text-align:center;
 }
 /**
+* CSS for AHP Fade
+**/
+ .fadeeffect {
+    -webkit-transition: opacity 250ms ease-in-out;
+    -moz-transition: opacity 250ms ease-in-out;
+    -o-transition: opacity 250ms ease-in-out;
+    transition: opacity 250ms ease-in-out;
+}
+
+
+/**
 * CSS for AHP Entry Form
 **/
-
-.flatform {
+ .flatform {
     font: 400 1em/1.5"Open Sans" sans-serif;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 }
-
 .switch {
     color: #6f839a;
     cursor: pointer;
@@ -101,39 +110,38 @@ input[type="radio"]:checked + .switch--on {
 input[type="radio"]:checked + .switch--off {
     background-color: #dd4a38;
 }
-
-
-
 /**
 * Loader
 **/
-.genericcontainer{
+ .splashlayer {
+    height: 100%;
+    width: 100%;
+    background-color: #d35400;
+    display:block;
+}
+.genericcontainer {
     position: fixed;
     top:50%;
     left:50%;
+    color: #fff;
 }
-
 [class*="loader--"] {
     width: 2em;
     height: 2em;
     display: inline-block;
     vertical-align: middle;
 }
-
 .loader--spin {
     border: .125em solid transparent;
     border-radius: 50%;
-    border-top-color: #3498db;
-    border-left-color: #3498db;
-
+    border-top-color: #fff;
+    border-left-color: #fff;
     -webkit-animation: spin .7s infinite linear;
     -moz-animation: spin .7s infinite linear;
     -o-animation: spin .7s infinite linear;
     animation: spin .7s infinite linear;
 }
-
-
-@keyframes "spin" {
+@keyframes"spin" {
     0% {
         -webkit-transform: rotate(0deg);
         -moz-transform: rotate(0deg);
@@ -153,43 +161,68 @@ input[type="radio"]:checked + .switch--off {
         transform: rotate(360deg);
     }
 }
-
 @-moz-keyframes spin {
-    0% { -moz-transform: rotate(0deg); transform: rotate(0deg); }
-    50% { -moz-transform: rotate(120deg); transform: rotate(120deg); }
-    100% { -moz-transform: rotate(360deg); transform: rotate(360deg); }
+    0% {
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    50% {
+        -moz-transform: rotate(120deg);
+        transform: rotate(120deg);
+    }
+    100% {
+        -moz-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-
-@-webkit-keyframes "spin" {
-    0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
-    50% { -webkit-transform: rotate(120deg); transform: rotate(120deg); }
-    100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
+@-webkit-keyframes"spin" {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    50% {
+        -webkit-transform: rotate(120deg);
+        transform: rotate(120deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-
-@-ms-keyframes "spin" {
-    0% { transform: rotate(0deg); }
-    50% { transform: rotate(120deg); }
-    100% { transform: rotate(360deg); }
+@-ms-keyframes"spin" {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(120deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
-
-@-o-keyframes "spin" {
-    0% { -o-transform: rotate(0deg); transform: rotate(0deg); }
-    50% { -o-transform: rotate(120deg); transform: rotate(120deg); }
-    100% { -o-transform: rotate(360deg); transform: rotate(360deg); }
+@-o-keyframes"spin" {
+    0% {
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    50% {
+        -o-transform: rotate(120deg);
+        transform: rotate(120deg);
+    }
+    100% {
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-
-
 .loader--pulse {
     border-radius: 50%;
-    background: #3498db;
-
+    background: #d35400;
     -webkit-animation: pulse .7s infinite linear;
     -moz-animation: pulse .7s infinite linear;
     -o-animation: pulse .7s infinite linear;
     animation: pulse .7s infinite linear;
 }
-
-@keyframes "pulse" {
+@keyframes"pulse" {
     from {
         -webkit-transform: scale(1);
         -moz-transform: scale(1);
@@ -204,7 +237,6 @@ input[type="radio"]:checked + .switch--off {
         opacity: 0;
     }
 }
-
 @-moz-keyframes pulse {
     from {
         -moz-transform: scale(1);
@@ -216,8 +248,7 @@ input[type="radio"]:checked + .switch--off {
         opacity: 0;
     }
 }
-
-@-webkit-keyframes "pulse" {
+@-webkit-keyframes"pulse" {
     from {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -228,8 +259,7 @@ input[type="radio"]:checked + .switch--off {
         opacity: 0;
     }
 }
-
-@-o-keyframes "pulse" {
+@-o-keyframes"pulse" {
     from {
         -o-transform: scale(1);
         transform: scale(1);
@@ -240,33 +270,58 @@ input[type="radio"]:checked + .switch--off {
         opacity: 0;
     }
 }
-
-@keyframes "load" {
-    0% { left: 0%;  }
-    50% { left: 35%;  }
-    100% { left: 100%;  }
+@keyframes"load" {
+    0% {
+        left: 0%;
+    }
+    50% {
+        left: 35%;
+    }
+    100% {
+        left: 100%;
+    }
 }
-
 @-moz-keyframes load {
-    0% { left: 0%; }
-    50% { left: 35%; }
-    100% { left: 100%; }
+    0% {
+        left: 0%;
+    }
+    50% {
+        left: 35%;
+    }
+    100% {
+        left: 100%;
+    }
 }
-
-@-webkit-keyframes "load" {
-    0% { left: 0%; }
-    50% { left: 35%; }
-    100% { left: 100%; }
+@-webkit-keyframes"load" {
+    0% {
+        left: 0%;
+    }
+    50% {
+        left: 35%;
+    }
+    100% {
+        left: 100%;
+    }
 }
-
-@-ms-keyframes "load" {
-    0% { left: 0%; }
-    50% { left: 35%; }
-    100% { left: 100%; }
+@-ms-keyframes"load" {
+    0% {
+        left: 0%;
+    }
+    50% {
+        left: 35%;
+    }
+    100% {
+        left: 100%;
+    }
 }
-
-@-o-keyframes "load" {
-    0% { left: 0%; }
-    50% { left: 35%; }
-    100% { left: 100%; }
+@-o-keyframes"load" {
+    0% {
+        left: 0%;
+    }
+    50% {
+        left: 35%;
+    }
+    100% {
+        left: 100%;
+    }
 }
