--- a/css/main.css
+++ b/css/main.css
@@ -79,10 +79,11 @@ h4 {
 * CSS for AHP Entry Form
 **/
  .flatform {
-    font: 400 1em/1.5"Open Sans" sans-serif;
+    font: 400 1em/1.5 "Open Sans" sans-serif;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    font-size:1.25em;
 }
 .switch {
     color: #6f839a;
